--- a/_config.yml
+++ b/_config.yml
@@ -70,7 +70,7 @@ pagination_dir: page
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-#theme landscape
+#theme: landscape
 theme: next
 #自适应布局
 stylus:
